# SimVascular

Code/: CMakeLists.txt
Code/Source/Modules/ProjectManagement/: svProjectManager.cxx  svProjectManager.h
Code/Source/sv4gui/Modules/MachineLearning/: CMakeLists.txt  files.cmake  sv4gui_MachineLearningUtils.cxx  sv4gui_MachineLearningUtils.h  svMLUtils.cxx  svMLUtils.h
Code/Source/sv4gui/Plugins/org.sv.gui.qt.machinelearning/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Code/Source/sv4gui/Plugins/org.sv.gui.qt.machinelearning/src/internal/: sv4gui_MachineLearning.cxx  sv4gui_MachineLearning.h  sv4gui_MachineLearning.ui  sv4gui_MachineLearningPluginActivator.cxx  sv4gui_MachineLearningPluginActivator.h  svML.cxx  svML.h  svML.ui
Code/Source/sv4gui/Plugins/org.sv.gui.qt.segmentation/: sv4gui_Seg2DEdit.cxx  sv4gui_Seg2DEdit.h  sv4gui_Seg2DEdit.ui
